Fix documentation, restructure Dockerfile for better efficiency

--- a/root/help.1
+++ b/root/help.1
@@ -8,24 +8,12 @@ dhcp\-client \- Dynamic Host Configuration Protocol Client
 
 .SH DESCRIPTION
 .PP
-A DHCP client container running as a root user based on Base Runtime. Provides a means for configuring one or more network interfaces using DHCP.
+A DHCP client container running as a root user based on Fedora 26 Boltron. Provides a means for configuring one or more network interfaces using DHCP.
 
 
 .SH USAGE
 .PP
-This container can be run as a service by running:
-
-.PP
-.RS
-
-.nf
-# systemctl start dhcp\-client\-container
-
-.fi
-.RE
-
-.PP
-For runnning in docker use:
+For running in docker use:
 
 .PP
 .RS
